<resources>
    <string name="app_name">FitusionSports</string>
    <string name="app_logo">app logo</string>
    <string name="ClickMe">Clickme</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="upload_data">Upload Data</string>
    <string name="enter_topic_name">Enter Topic NAME</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_language">Enter Language</string>
    <string name="save">Save</string>
    <string name="uploadImageHere">uploadimagehere</string>
    <string name="add">add</string>
    <string name="adaptable_generalized_training">Adaptable Generalized Training</string>
    <string name="bullet_proof_knee">Bullet Proof Knee</string>
    <string name="backward_sled_drag_button">BackwardSledDragButton</string>
    <string name="BackwardSledDrag">BackWardSledDrag</string>
    <string name="BandedHipFlexion">BandedHipFlexion</string>
    <string name="BandedKneeFlexion">BandedKneeFlexion</string>
    <string name="LegExtension">LegExtension</string>
    <string name="bullet_proof_spine">Bullet Proof Spine</string>
    <string name="BackExtension">BackExtension</string>
    <string name="usernameText">UserName</string>
    <string name="welcomeText">Welcome,</string>
    <string name="DefaultUserIcon">defaultUserIcon</string>
    <string name="week">Week</string>
    <string name="FitStreak">FitStreaks</string>
    <string name="StreakDay">StreakDay</string>
    <string name="StreaMeter">StreakMeter</string>
    <string name="TodaysWorkout">Today\'s Workout</string>
    <string name="ImproveStreakByDoing">Improve your streak by doing</string>
    <string name="WorkoutName">Workout Name</string>
    <string name="Duration">Duration:</string>
    <string name="Time">Time</string>
    <string name="hamstring_strenthening">HamstringStrenthening</string>
    <string name="BarbellBackSquats">BarbellBackSquats</string>
    <string name="barbellbacksquats">BarBellBackSquats</string>
    <string name="TargetGroupText">TargetGroup</string>
    <string name="EquipmentProfile">Equiment Profile</string>
    <string name="DurationText">Duration</string>
    <string name="EquipmentAvailable">Equipment Available</string>
    <string name="ExcerciseNameText">ExcerciseName</string>
    <string name="SetsAndReps">Sets and Reps</string>
    <string name="TargetGroupName">TargetGroupName</string>
    <string name="ImageToAppear">ImageToAppear</string>
    <string name="CricketButton">CricketButton</string>
    <string name="BadmintonButton">BadmintonButton</string>
    <string name="BasketballButton">BasketBallButton</string>
    <string name="TennisButton">TennisButton</string>
    <string name="SwimmingButton">SwimmingButton</string>
    <string name="MenuButton">MenuButton</string>
    <string name="SportsLibraryText">Sports Library</string>
    <string name="Cricket">Cricket</string>
    <string name="BadmintonText">Badminton</string>
    <string name="SwimmingText">Swimming</string>
    <string name="FootballText">Football</string>
    <string name="TennisText">Tennis</string>
    <string name="Hockey">Hockey</string>
    <string name="BasketballText">BasketBall</string>
    <string name="StartWorkout">Start Workout</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StartYourWorkout">Start Your Workout</string>
    <string name="StopClockButton">StopClock</string>
    <string name="WorkoutTime">WorkoutTime</string>
    <string name="TimeText">Time</string>
</resources>